*** 0.7.0
 + Added experimental code to run host checker from jvpn
 + Include LWP traffic dump in the debug output
 + Added sample script to restore original DNS settings after connect
 + Added experimental grid cards support
 # fixed processing of last line w/o \n character in configuration file

*** 0.6.1
 # Fixed script support - in 0.6.0 code was not committed by mistake
 + Added ability to change default url
 + Added support for external password providers and example for stoken
   integration

*** 0.6.0
 # fixed packet format in non-ncui mode. This should resolve reported
   "sending configuration packet" issue.
 + Added scripting support for up/down events

*** 0.5.0
 + added experimental ncui mode support to jvpn
 + added wrapper.c for the ncui mode
 + implementing stat for the ncui mode

*** 0.4.2
 + added code to handle ncsvc disconnect event. Trying to restore resolv.conf
   if its not done by client.

*** 0.4.1
 # Fixed error on reconnect

*** 0.4.0
 + Migrated from Perl curl binding to LWP library. WWW::Curl seems to be broken
   on RHEL 6, also LWP semantic is much better documented.

*** 0.3.1
 # Fixed problems on RHEL5 caused by old perl module

*** 0.3.0
 + Enabling ncsvc process logging if debug is enabled
 + Added ip address, gateway and DNS information
 + Added RX/TX bytes
 # Fixed CTRL+C handling, added HUP and TERM signals handling
 + Disabled cursor in the main loop mode

*** 0.2.0
 + Added command line --conf switch to define configuration file

*** 0.1.0
 ! Initial release